--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,11 +47,15 @@ jobs:
     - name: Install cross-compilation tools
       if: matrix.target == 'aarch64-unknown-linux-gnu'
       run: |
-        sudo apt-get update
-        sudo apt-get install -y gcc-aarch64-linux-gnu
+        cargo install cross --git https://github.com/cross-rs/cross
 
     - name: Build
-      run: cargo build --release --target ${{ matrix.target }}
+      run: |
+        if [ "${{ matrix.target }}" = "aarch64-unknown-linux-gnu" ]; then
+          cross build --release --target ${{ matrix.target }}
+        else
+          cargo build --release --target ${{ matrix.target }}
+        fi
 
     - name: Prepare artifact
       run: |
