--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,13 +49,13 @@ jobs:
       run: |
         cargo install cross --git https://github.com/cross-rs/cross
 
-    - name: Build
-      run: |
-        if [ "${{ matrix.target }}" = "aarch64-unknown-linux-gnu" ]; then
-          cross build --release --target ${{ matrix.target }}
-        else
-          cargo build --release --target ${{ matrix.target }}
-        fi
+    - name: Build (ARM64 Linux)
+      if: matrix.target == 'aarch64-unknown-linux-gnu'
+      run: cross build --release --target ${{ matrix.target }}
+
+    - name: Build (Other targets)
+      if: matrix.target != 'aarch64-unknown-linux-gnu'
+      run: cargo build --release --target ${{ matrix.target }}
 
     - name: Prepare artifact
       run: |
